fix(ui): App - decrease vertical spacing between components

--- a/packages/ui/src/app/app.module.css
+++ b/packages/ui/src/app/app.module.css
@@ -13,8 +13,8 @@
 }
 
 .summaryContainer {
-  padding-top: var(--space-large);
-  padding-bottom: var(--space-small);
+  padding-top: var(--space-medium);
+  padding-bottom: var(--space-xsmall);
 }
 
 .tabsContainer {
@@ -35,8 +35,8 @@
 }
 
 .tabsContent {
-  padding-top: var(--space-large);
-  padding-bottom: var(--space-large);
+  padding-top: var(--space-medium);
+  padding-bottom: var(--space-medium);
   min-height: 480px;
 }
 
